button alignment fix

--- a/src/app/components/products/products.component.css
+++ b/src/app/components/products/products.component.css
@@ -1,9 +1,9 @@
 .card-top {
-  position: relative;
+  /* position: relative;
   display: flex;
   flex-direction: column;
   min-width: 0;
-  word-wrap: break-word;
+  word-wrap: break-word; */
   background: #fff;
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.2);
@@ -24,8 +24,9 @@
 }
 
 .card {
-  padding: 20px;
-  margin: 50px;
+  padding: 10px;
+  margin: 10px;
+ 
 }
 
 .card img {
